@@ -1,3 +1,8 @@
+2007-08-23  Derek Price  <derek@ximbiot.com>
+
+	* .cvsignore: Remove error.m4.
+	* m4/fseeko.m4, m4/ftello.m4, m4/lseek.m4: New files from GNULIB.
+
 2007-08-22  Derek Price  <derek@ximbiot.com>
 
 	* .cvsignore: New file from GNULIB.
